tests/compile/command_modules/pipeline_kind.stderr
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:87:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, rcgp::TerminalSentinel<rcgp::PipelineKind::eCompute>>' requested here
   87 |                 | dispatch(1);
      |                 ^
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:104:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eCompute>, rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
  104 |                 | draw(3);
      |                 ^
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:108:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
  108 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:133:19: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
  133 |         auto cmds = live | draw(3);
      |                          ^
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:163:21: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::NormalEntry<norm_entry{{4, nullptr, 0}, 3, {{0, 0}, {0, 0}}, nullptr}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eCompute>>' requested here
  163 |         auto cmds = stage1 | dispatch(1);
      |                            ^
4 errors generated.
